--- a/data/weather_crwaling.ipynb
+++ b/data/weather_crwaling.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
-    "from bs4 import BeautifulSoup\n",
-    "import pandas as pd\n",
-    "import json"
+    "import pandas as pd"
    ]
   },
   {
@@ -1355,7 +1353,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weathers = []\n",
     "weather_columns = ('year', 'month', 'avg_temp', 'high_temp', 'low_temp', 'avg_cloud', 'daily_rain')\n",
     "date = []\n",
     "info = []\n",
@@ -1690,152 +1687,6 @@
    "source": [
     "info_df['day'] = date_df\n",
     "weather_df = info_df[['year', 'month', 'day', 'status']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>박무 연무</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>박무 연무</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>박무 연무</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>박무 연무</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>박무 연무 햇무리</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>448</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>12</td>\n",
-       "      <td>27</td>\n",
-       "      <td>박무</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>449</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>12</td>\n",
-       "      <td>28</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>450</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>12</td>\n",
-       "      <td>29</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>451</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>12</td>\n",
-       "      <td>30</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>452</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>12</td>\n",
-       "      <td>31</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>453 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     year  month day     status\n",
-       "0    2017      1   1      박무 연무\n",
-       "1    2017      1   2      박무 연무\n",
-       "2    2017      1   3      박무 연무\n",
-       "3    2017      1   4      박무 연무\n",
-       "4    2017      1   5  박무 연무 햇무리\n",
-       "..    ...    ...  ..        ...\n",
-       "448  2019     12  27         박무\n",
-       "449  2019     12  28           \n",
-       "450  2019     12  29           \n",
-       "451  2019     12  30           \n",
-       "452  2019     12  31           \n",
-       "\n",
-       "[453 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "weather_df"
    ]
   },
   {
@@ -2462,7 +2313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
