--- a/data/weather_crwaling.ipynb
+++ b/data/weather_crwaling.ipynb
@@ -2334,6 +2334,172 @@
    "source": [
     "test.to_csv('weather_total_data2.csv', encoding='euc-kr')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 워드클라우드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['기리보이', 'GIRIBOY', '치명적인앨범', '제설', '와츠롱', '기리보이이벤트2']\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "['기리보이', 'GIRIBOY', '치명적인앨범', '제설', '와츠롱', '기리보이이벤트2', '홋카이도', '이와미자와', '눈', '눈보라', '폭설', '설경', '제설', '제설작업']\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "['기리보이', 'GIRIBOY', '치명적인앨범', '제설', '와츠롱', '기리보이이벤트2', '홋카이도', '이와미자와', '눈', '눈보라', '폭설', '설경', '제설', '제설작업']\n",
+      "['기리보이', 'GIRIBOY', '치명적인앨범', '제설', '와츠롱', '기리보이이벤트2', '홋카이도', '이와미자와', '눈', '눈보라', '폭설', '설경', '제설', '제설작업', '10', '20', '30', '40', '스타스테크']\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-32-b6487aa94f5f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element_by_css_selector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'div.v1Nh3.kIKUG._bz0w'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m300\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element_by_css_selector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'.C7I1f.X7jCj'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# C7I1f X7jCj\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from selenium import webdriver as wd \n",
+    "import time \n",
+    "import re \n",
+    "\n",
+    "driver = wd.Chrome(\"./chromedriver\")\n",
+    "driver.get('https://www.instagram.com/accounts/login/?source=auth_switcher')\n",
+    "time.sleep(3)\n",
+    "\n",
+    "id = 'txek_txek'\n",
+    "password = '011011'\n",
+    "id_input = driver.find_elements_by_css_selector('#loginForm > div > div:nth-child(1) > div > label > input')[0]\n",
+    "id_input.send_keys(id)\n",
+    "password_input = driver.find_elements_by_css_selector('#loginForm > div > div:nth-child(2) > div > label > input')[0]\n",
+    "password_input.send_keys(password)\n",
+    "password_input.submit()\n",
+    "time.sleep(3) \n",
+    "\n",
+    "keyword = \"제설\"\n",
+    "url = \"https://www.instagram.com/explore/tags/{}/\".format(keyword)\n",
+    "instagram_tags = [] \n",
+    "driver.get(url)\n",
+    "time.sleep(3)\n",
+    "\n",
+    "\n",
+    "driver.find_element_by_css_selector('div.v1Nh3.kIKUG._bz0w').click() \n",
+    "for i in range(300): \n",
+    "    time.sleep(1)\n",
+    "    try:\n",
+    "        data = driver.find_element_by_css_selector('.C7I1f.X7jCj') # C7I1f X7jCj \n",
+    "        tag_raw = data.text \n",
+    "        tags = re.findall('#[A-Za-z0-9가-힣]+', tag_raw) \n",
+    "        tag = ''.join(tags).replace(\"#\",\" \") # \"#\" 제거 \n",
+    "        tag_data = tag.split() \n",
+    "        for tag_one in tag_data: \n",
+    "            instagram_tags.append(tag_one) \n",
+    "        print(instagram_tags) \n",
+    "        driver.find_element_by_css_selector('body > div._2dDPU.CkGkG > div.Igw0E.IwRSH.eGOV_._4EzTm.BI4qX.qJPeX.fm1AK.TxciK.yiMZG > button > div > svg > path').click() \n",
+    "        time.sleep(3)\n",
+    "    except:\n",
+    "        print()\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
